MySQL access control, project start shell